2014-06-04  Jes Frellsen  <frellsen@cam>

	* bin/examples/ising.cpp: Added a cmd line option for initial_max.

	* muninn/GE.cpp: The updatescheme is now updated with the
	individual histograms rather than the sum-histogram.

	* muninn/Factories/CGEfactory.cpp: Added an automatic calculation
	of the increase_factor.

	* muninn/Factories/CGEfactory.h: Removed the increase_factor
	setting.

2014-05-30  Jes Frellsen  <frellsen@cam>

	* bin/examples/ising.cpp: Added memory option.

	* muninn/Factories/CGEfactory.h: Set default memory to 20

2014-05-30  Jes Frellsen  <frellsen@cam>

	* bin/examples/ising.cpp: Added option to simulate multiple
	threads.

	* bin/examples/normal.cpp: Added option to simulate multiple
	threads.

	* muninn/CGE.cpp: See CGE.h

	* muninn/CGE.h: Added support for multiple threads, so now
	add_observation has an additional argument thread_id.

	* muninn/common.h: Defined MUNINN_MULTITHREADED

	* muninn/GE.cpp: See GE.h

	* muninn/GE.h: Added support for multiple threads, which means
	that the current histogram is replaced by current_sum and
	current_histograms.

	* muninn/Factories/CGEfactory.cpp: Added nthreads argument to CGE
	constructor.

	* muninn/Factories/CGEfactory.h: Added nthreads setting.

	* muninn/tools/CanonicalAverager.cpp: Adjusted to reflect changes
	in GE class.

2014-05-30  Jes Frellsen  <frellsen@cam>

	* muninn/GE.h (GE): Fixed an indention error.

2014-04-30  Jes Frellsen  <frellsen@cam>

	* bin/examples/Makefile.am: LDFLAGS -> AM_LDFLAGS

	* bin/tools/Makefile.am: LDFLAGS -> AM_LDFLAGS

	* configure.ac: Added fix for automake 1.12 and later.

	* muninn/Binners/UniformBinner.h: Corrected error in initialising
	std_bins in one of the constructors.

	* muninn/Exceptions/MaximalNumberOfBinsExceed.h: Added getters for
	max_number_of_bins and requested_number_of_bins.

	* muninn/utils/nonlinear/newton/LineSearchAlgorithm.h: Removed
	warning for binary operator with parentheses.

2013-10-29  Jes Frellsen  <frellsen@binf>
